--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ sites/all/themes/README.txt
 web.config
 authorize.php
 cron.php
-index.php
+#index.php
 install.php
 update.php
 xmlrpc.php
@@ -35,3 +35,4 @@ xmlrpc.php
 /profiles
 /scripts
 /themes
+/nbproject/private/
